--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "password-validator",
   "version": "0.1.0",
-  "homepage": "https://jyotikhot.github.io/package-validator",
+  "homepage": "https://jyotikhot.github.io/password-validator",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
